[build-system]
requires = ["hatchling!=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "graphene-file-upload"
version = "1.3.0"
description = "Lib for adding file upload functionality to GraphQL mutations in Graphene Django and Flask-Graphql"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Lucas McGartland", email = "lucasmcgartland@gmail.com" },
]
keywords = [
    "apollo",
    "graphene",
    "graphql",
    "upload",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.2",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "six>=1.11.0",
]

[project.optional-dependencies]
all = [
    "Flask>=1.0.2",
    "graphene-django>=3.0.0b6",
    "graphene>=3.0b7",
    "graphql-server[flask]>=3.0.0b3",
]
django = [
    "graphene-django>=3.0.0b6",
]
flask = [
    "Flask>=1.0.2",
    "graphene>=3.0b7",
    "graphql-server[flask]>=3.0.0b3",
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/lmcgartland/graphene-file-upload"

[tool.hatch.build.targets.sdist]
include = [
    "/graphene_file_upload",
]
